--- a/concreto-flexion.html
+++ b/concreto-flexion.html
@@ -363,6 +363,12 @@
         }
         animate();
 
+				window.addEventListener('resize', function() {
+          camera.aspect = window.innerWidth / window.innerHeight;
+					camera.updateProjectionMatrix();
+					renderer.setSize(window.innerWidth, window.innerHeight);
+				});
+
 			</script>
 		</div>
 	</main>
