--- a/concreto-flexion.html
+++ b/concreto-flexion.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Resistencia del concreto a compresión</title>	
+	<title>Resistencia del concreto a flexión</title>	
 	
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
 		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
@@ -362,7 +362,8 @@
 			  	controls.update();  
         }
         animate();
-
+        
+				// La ventana se ajusta automáticamente
 				window.addEventListener('resize', function() {
           camera.aspect = window.innerWidth / window.innerHeight;
 					camera.updateProjectionMatrix();
