--- a/concreto-flexion.html
+++ b/concreto-flexion.html
@@ -57,10 +57,9 @@
 
 		</header>	
 
-	<div style="width: 100%; height: 100%; display: flex; flex-direction: row; background-color: rgb(14, 66, 112);"> 
+	<div style="width: 100%; height: 100%; display: flex; flex-direction: row;"> 
 		<!-- Panel izquierdo -->
 		<div class="position-fixed" style="width: 400px; background-color: #ffffff;padding: 90px 5px; height: 100%;">
-
 			
 			<div class="card mt-2" style="width: 100%; display: flex;	justify-content: center;	align-items: center;" >
 				<div class="card-body" style="text-align: center;">					
