--- a/concreto-flexion.html
+++ b/concreto-flexion.html
@@ -329,7 +329,7 @@
   
         // Cargar escenario
 				const loaderEscenario = new THREE.GLTFLoader();        
-        loaderEscenario.load('laboratorio-flexion.gltf', function(gltf) {        
+        loaderEscenario.load('escenario-flexion.gltf', function(gltf) {        
         	scene.add(gltf.scene);       
         }, undefined, function (error) {        
         	console.error(error);        
