--- a/concreto-compresion.html
+++ b/concreto-compresion.html
@@ -107,141 +107,145 @@
 					let falla, finEnsayo = false;
 					let tiempoFalla;
 
-					function grafica() {
-						const areaCilindro = Math.PI * (diametroCilindro / 2) ** 2;
-						const precision = Number(0.05);
-						// Velocidad de carga = 1 mm / min
-						const velocidadCarga = Number(1 / 60); // en mm/s
-						const pasoDeformacion = velocidadCarga / (longitudCilindro - velocidadCarga);
-						const resistenciaNominal = Math.floor((Math.random() * 50) + 5);
-						//const resistenciaNominal = parseInt(document.getElementById('resistenciaNominal').value);
-						const resistenciaObtenida = resistenciaNominal + resistenciaNominal * Math.random() * 0.15 - resistenciaNominal * Math.random() * 0.15;
-						// 1 psi = 6894.76 Pa
-						const FC = resistenciaObtenida * 1000 / 6.89; // FC es f'c en psi
-						const n = 0.8 + (FC / 2500);
-						const Ec = 57000 * Math.sqrt(FC); // en psi
-						const e0 = (FC / Ec) * (n / (n - 1));
-						let data = [];
-						let datosCarga = [];
-						let e;
 
-						for (e = 0.00000; e <= 0.00300; e += pasoDeformacion) {
+					const areaCilindro = Math.PI * (diametroCilindro / 2) ** 2;
+					const precision = Number(0.05);
+					// Velocidad de carga = 1 mm / min
+					const velocidadCarga = Number(1 / 60); // en mm/s
+					const pasoDeformacion = velocidadCarga / (longitudCilindro - velocidadCarga);
+					const resistenciaNominal = Math.floor((Math.random() * 50) + 5);
+					//const resistenciaNominal = parseInt(document.getElementById('resistenciaNominal').value);
+					const resistenciaObtenida = resistenciaNominal + resistenciaNominal * Math.random() * 0.15 - resistenciaNominal * Math.random() * 0.15;
+					// 1 psi = 6894.76 Pa
+					const FC = resistenciaObtenida * 1000 / 6.89; // FC es f'c en psi
+					const n = 0.8 + (FC / 2500);
+					const Ec = 57000 * Math.sqrt(FC); // en psi
+					const e0 = (FC / Ec) * (n / (n - 1));
+					let data = [];
+					let datosCarga = [];
+					let e;
+					let tiempo = 0;
 
-							let coef = e / e0;
+					for (e = 0.00000; e <= 0.00300; e += pasoDeformacion) {
 
-							let k = (coef <= 1) ? 1 : 0.67 + (FC / 9000);
+						let coef = e / e0;
 
-							let fc = (6.89 / 1000) * (n * FC * coef) / (n - 1 + coef ** (n * k));
+						let k = (coef <= 1) ? 1 : 0.67 + (FC / 9000);
 
-							let carga = ((fc + Math.random() * precision) * areaCilindro / 1000).toFixed(3); // en kN 
+						let fc = (6.89 / 1000) * (n * FC * coef) / (n - 1 + coef ** (n * k));
 
-							let deformacion = (longitudCilindro * e / (1 + e)).toFixed(3); // en mm
+						let carga = ((fc + Math.random() * precision) * areaCilindro / 1000).toFixed(3); // en kN 
 
-							datosExcel.push([Number(carga), Number(deformacion)]);
+						let deformacion = (longitudCilindro * e / (1 + e)).toFixed(3); // en mm
 
-							datosCarga.push(Number(carga));
+						datosExcel.push([Number(carga), Number(deformacion)]);
 
-							cargaMaxima = Math.max.apply(null, datosCarga);
+						datosCarga.push(Number(carga));
 
-							data.push({ x: deformacion, y: carga });
+						tiempo++;
 
-							if (carga < cargaMaxima) {
-								falla = true;
-								tiempoFalla = carga.length * 1000;
-							}
+						cargaMaxima = Math.max.apply(null, datosCarga);						
 
-							else if (carga < 0.95 * cargaMaxima) {
-								break;
-								finEnsayo = true;
-							}
+						data.push({ x: deformacion, y: carga });
 
-							else {
-								continue;
-							}
-
+						if (carga < cargaMaxima) {
+							falla = true;
+							tiempoFalla = carga.length * 1000;
 						}
 
-						// Configuración de la animación de la gráfica
-						tippy('[data-tippy-content]');
-						const totalDuration = data.length * 1000;
-						const delayBetweenPoints = totalDuration / data.length;
-						const previousY = (ctx) => ctx.index === 0 ? ctx.chart.scales.y.getPixelForValue(100) : ctx.chart.getDatasetMeta(ctx.datasetIndex).data[ctx.index - 1].getProps(['y'], true).y;
+						if (carga < 0.95 * cargaMaxima) {
+							break;
+							finEnsayo = true;
+						}
 
-						const animation = {
-							x: {
-								type: 'number',
-								easing: 'linear',
-								duration: delayBetweenPoints,
-								from: NaN, // the point is initially skipped
-								delay(ctx) {
-									if (ctx.type !== 'data' || ctx.xStarted) {
-										return 0;
-									}
-									ctx.xStarted = true;
-									return ctx.index * delayBetweenPoints;
+						else {
+							continue;
+						}
+
+					}
+
+					// Configuración de la animación de la gráfica
+					tippy('[data-tippy-content]');
+					const totalDuration = tiempo * 100;
+					const delayBetweenPoints = 100;
+					const previousY = (ctx) => ctx.index === 0 ? ctx.chart.scales.y.getPixelForValue(100) : ctx.chart.getDatasetMeta(ctx.datasetIndex).data[ctx.index - 1].getProps(['y'], true).y;
+
+					const animation = {
+						x: {
+							type: 'number',
+							easing: 'linear',
+							duration: delayBetweenPoints,
+							from: NaN, // the point is initially skipped
+							delay(ctx) {
+								if (ctx.type !== 'data' || ctx.xStarted) {
+									return 0;
 								}
-							},
-
-							y: {
-								type: 'number',
-								easing: 'linear',
-								duration: delayBetweenPoints,
-
-								from: previousY,
-								delay(ctx) {
-									if (ctx.type !== 'data' || ctx.yStarted) {
-										return 0;
-									}
-									ctx.yStarted = true;
-									return ctx.index * delayBetweenPoints;
-								}
+								ctx.xStarted = true;
+								return ctx.index * delayBetweenPoints;
 							}
-						};
+						},
 
-						const config = {
-							type: 'line',
-							data: {
-								datasets: [{
-									borderColor: 'rgb(200, 50, 50)',
-									borderWidth: 1.5,
-									radius: 0,
-									data: data,
-								}],
+						y: {
+							type: 'number',
+							easing: 'linear',
+							duration: delayBetweenPoints,
+
+							from: previousY,
+							delay(ctx) {
+								if (ctx.type !== 'data' || ctx.yStarted) {
+									return 0;
+								}
+								ctx.yStarted = true;
+								return ctx.index * delayBetweenPoints;
+							}
+						}
+					};
+
+					const config = {
+						type: 'line',
+						data: {
+							datasets: [{
+								borderColor: 'rgb(200, 50, 50)',
+								borderWidth: 1.5,
+								radius: 0,
+								data: data,
+							}],
+						},
+
+						options: {
+							animation,
+							interaction: {
+								intersect: false
+							},
+							plugins: {
+								legend: false,
+								title: {
+									display: true,
+									text: 'Concreto a compresión'
+								}
 							},
 
-							options: {
-								animation,
-								interaction: {
-									intersect: false
-								},
-								plugins: {
-									legend: false,
+							scales: {
+								x: {
+									type: 'linear',
 									title: {
 										display: true,
-										text: 'Concreto a compresión'
-									}
+										text: 'Deformación (mm)'
+									},
 								},
 
-								scales: {
-									x: {
-										type: 'linear',
-										title: {
-											display: true,
-											text: 'Deformación (mm)'
-										},
-									},
-
-									y: {
-										type: 'linear',
-										title: {
-											display: true,
-											text: 'Carga aplicada (kN)'
-										}
+								y: {
+									type: 'linear',
+									title: {
+										display: true,
+										text: 'Carga aplicada (kN)'
 									}
 								}
 							}
-						};
+						}
+					};
 
+					function grafica() {
 						const myChart = new Chart(
 							document.getElementById('myChart'),
 							config
@@ -281,7 +285,7 @@
 				<p id="reporte-carga">
 					<script>
 						function mensajeCargaMaxima() {
-							tiempoFalla = setTimeout("datoCargaMaxima()", 50000);
+							Falla = setTimeout("datoCargaMaxima()", totalDuration + 20600);
 						}
 
 						function datoCargaMaxima() {
