--- a/concreto-flexion.html
+++ b/concreto-flexion.html
@@ -101,9 +101,9 @@
 							// Velocidad de carga en N/s 
 							const velocidadCarga = Number((cargaFibraExterior * anchoVigaInicial * alturaVigaInicial ** 2 / longitudVano).toFixed(3));
 
-							let data = [];
+							let data = [];													
 							let datosExcel = [];
-							let carga = 0.00;
+							let carga = 0;
 							let tiempo = 0;
 							let deflexion = 0;
 
@@ -274,11 +274,12 @@
 				<script>
 					function datosEnsayoFlexion() {
 						let wb = XLSX.utils.book_new();
-						wb.SheetNames.push("Concreto a flexión");
-						let ws_data = datosExcel;
-						let ws = XLSX.utils.aoa_to_sheet(ws_data, { origin: "A2" });
-						wb.Sheets["Concreto a flexión"] = ws;
-						XLSX.utils.sheet_add_aoa(ws, [["Carga aplicada (kN)", "Deformación (mm)"]], { origin: "A1" });
+						wb.SheetNames.push("Datos máquina", "Reporte");
+						// let ws_data0 = [[0.000, 0.0000]];
+						let ws_data = datosExcel;												
+						let ws = XLSX.utils.aoa_to_sheet(ws_data, { origin: "A3" });
+						wb.Sheets["Datos máquina"] = ws;
+						XLSX.utils.sheet_add_aoa(ws, [["Carga aplicada (kN)", "Deformación (mm)"], [0.000, 0.0000]], { origin: "A1" });
 						ws["!cols"] = [{ wch: 20 }, { wch: 20 }];
 
 						return XLSX.writeFile(wb, "datos_concreto_flexion.xlsx");
@@ -291,8 +292,8 @@
 			<div style="position: absolute; top: 90px; left: 400px;">
 				<script>
 					const scene = new THREE.Scene();
-					const axesHelper = new THREE.AxesHelper(1);
-					scene.add(axesHelper);
+					// const axesHelper = new THREE.AxesHelper(1);
+					// scene.add(axesHelper);
 					const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
 					const renderer = new THREE.WebGLRenderer();
 					renderer.setSize(window.innerWidth, window.innerHeight);
