--- a/modulo-mecanica.html
+++ b/modulo-mecanica.html
@@ -3,6 +3,7 @@
 
   <head>  
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"&amp;gt;>
     <link rel="icon" href="./imagenes/computer-icon-small.png">
     <link rel="shortcut icon" href="./imagenes/favicon.PNG" type="image/x-icon">
     <meta name="author" content="Universidad del Valle Grupo de Investigación RISK"> 
@@ -32,7 +33,7 @@
 
       <div class="contenedor-ppal">
         <div style="text-align: center;">
-          <h4>Acero a tracción</h4>
+          <h4>Acero y aluminio a tracción</h4>
         </div>
         <div class="contenedor-ensayos">
           <div class="imagen-ensayo">            
@@ -41,12 +42,12 @@
 
           <div class="descripcion-ensayo">
             <p>
-              Aquí va la descripcion del ensayo de acero a tracción.
+              Aquí va la descripcion del ensayo de acero y aluminio a tracción.
             </p>
 
             <div class="contenedor-botones">
               <div>
-                <a href="">
+                <a href="https://reidermunoz.github.io/lab-tension.github.io/indexrelojvariosensayos.html">
                   <button class="boton-ensayo" >Ir al ensayo</button>
                 </a>                
               </div>
@@ -75,7 +76,7 @@
 
           <div class="contenedor-botones">
             <div>
-              <a href="">
+              <a href="https://reidermunoz.github.io/lab-tension.github.io/indexrelojvariosensayos_flexion.html">
                 <button class="boton-ensayo" >Ir al ensayo</button>
               </a>                
             </div>
@@ -91,21 +92,21 @@
         </div>
         
         <div style="text-align: center;">
-          <h4>Madera a compresión</h4>
+          <h4>Acero y madera a compresión</h4>
         </div>
         <div class="contenedor-ensayos">
           <div class="imagen-ensayo"> 
-            <img src="./imagenes/modulo-mecanica.jpg" alt="Ensayo madera compresión">           
+            <img src="./imagenes/modulo-mecanica.jpg" alt="Ensayo acero y madera a compresión">           
 
           </div> 
           <div class="descripcion-ensayo">
             <p>
-              Aquí va la descripcion de Madera a compresión.
+              Aquí va la descripcion de acero y madera a compresión.
             </p>
 
           <div class="contenedor-botones">
             <div>
-              <a href="">
+              <a href="https://reidermunoz.github.io/lab-tension.github.io/indexrelojvariosensayos_compresion.html">
                 <button class="boton-ensayo" >Ir al ensayo</button>
               </a>                
             </div>
