--- a/concreto-compresion.html
+++ b/concreto-compresion.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"&amp;gt;>
 	<link rel="icon" href="./imagenes/computer-icon-small.png">
 	<link rel="shortcut icon" href="./imagenes/favicon.PNG" type="image/x-icon">
 	<meta name="author" content="Grupo de Investigación RISK - Universidad del Valle">
@@ -365,10 +366,10 @@
 			hemiLight.position.set(0, 3, 0);
 			scene.add(hemiLight);
 
-			const light = new THREE.AmbientLight(0xffffff); // soft white light
+			const light = new THREE.AmbientLight(0xffffff, 1.5); // soft white light
 			scene.add(light);
 
-			const dirLight = new THREE.DirectionalLight(0xffffff, 1);
+			const dirLight = new THREE.DirectionalLight(0xffffff, 1.5);
 			dirLight.position.set(2.5, 2.5, 0);
 			dirLight.target = new THREE.Object3D(0.25, 1.25, 0);
 			scene.add(dirLight);
