--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="es">
 
   <head> 
-    <meta charset="utf-8">
+    <meta charset="utf-8">    	
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"&amp;gt;>
     <link rel="icon" href="./imagenes/computer-icon-small.png">
     <link rel="stylesheet" href="style2.css">
     <title>EstrucLab Laboratorios Virtuales</title>
