--- a/modulo-concreto.html
+++ b/modulo-concreto.html
@@ -3,6 +3,7 @@
 
   <head>  
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"&amp;gt;>
     <link rel="icon" href="./imagenes/computer-icon-small.png">
     <link rel="shortcut icon" href="./imagenes/favicon.PNG" type="image/x-icon">
     <meta name="author" content="Universidad del Valle Grupo de Investigación RISK"> 
