--- a/concreto-flexion.html
+++ b/concreto-flexion.html
@@ -5,6 +5,7 @@
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"&amp;gt;>
+	<link rel="icon" href="./imagenes/computer-icon-small.png">
 
 	<title>Resistencia del concreto a flexión</title>
 
